# platform

./: .env.backup  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENT_HANDOVER.md  AGENT_HANDOVER_ARCHIVE.md  AGENT_HANDOVER_LOG.md  AGENT_MEMORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_CONTEXT.md  Makefile  NEXT.md  README.md  VERSION  adr-review.md  adr.md  agent-session-start.md  agentic-coding.md  backup.md  bootstrap.sh  cascade-auftraege.md  catalog-info.yaml  compose-audit.md  create-pdf.md  deploy-check.md  deploy.md  docu-update.md  frontend-ui-test.md  idea-intake.md  infra-health.md  knowledge-capture.md  onboard-repo.md  platform-audit.md  platform-reflex.yaml  pre-code.md  pre-release-test.md  prompt.md  (+16 more)
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
admin/: admin.js  index.html  styles.css  tenants.html  users.html
agents/: __init__.py  adr_scribe.py  context_reviewer.py  drift_detector.py  guardian.py  onboarding_coach.py
apps/bfagent/django-htmx-mcp/: README.md  pyproject.toml
apps/bfagent/django-htmx-mcp/django_htmx_mcp/: __init__.py  schemas.py  server.py  templating.py
apps/bfagent/django-htmx-mcp/django_htmx_mcp/templates/: htmx_list.html.j2  model.py.j2
apps/bfagent/django-htmx-mcp/django_htmx_mcp/tools/: __init__.py  analysis.py  forms.py  htmx_patterns.py  models.py  scaffolding.py  templates.py  tests.py  urls.py  views.py
apps/bfagent/django-htmx-mcp/examples/: claude_desktop_config.json  demo.py
apps/bfagent/django-htmx-mcp/tests/: __init__.py  test_models.py  test_views.py
apps/bfagent/docs_v2/bfa_agent update and thoughts/: .env.example  README.md  pyproject.toml
apps/bfagent/docs_v2/bfa_agent update and thoughts/bfa_agent/: __init__.py  agents.py  agents_mcp.py  agents_presets.py  agents_research.py  config.py  mcp_integration.py  models.py  presets.py  runner.py  tools.py
apps/bfagent/docs_v2/bfa_agent update and thoughts/bfa_agent/mcp_server/: __init__.py  server.py
apps/bfagent/docs_v2/bfa_agent update and thoughts/docs/: PRESETS.md
apps/bfagent/docs_v2/bfa_agent update and thoughts/examples/: basic_usage.py  mcp_usage.py  preset_usage.py  research_usage.py
apps/bfagent/docs_v2/sphinx_markdown_export/: LICENSE  README.md  __init__.py  admin.py  apps.py  cli.py  export_service.py  models.py  pyproject.toml  setup.py  sphinx_converter.py
apps/bfagent/docs_v2/sphinx_markdown_export/management/commands/: sphinx_to_markdown.py
apps/bfagent/docs_v2/story-outline-tool/: README.md  pyproject.toml
apps/bfagent/docs_v2/story-outline-tool/examples/: demo.py
apps/bfagent/docs_v2/story-outline-tool/src/: __init__.py
apps/bfagent/docs_v2/story-outline-tool/src/cli/: __init__.py  main.py
apps/bfagent/docs_v2/story-outline-tool/src/repositories/: __init__.py  novel_repository.py
apps/bfagent/docs_v2/story-outline-tool/src/services/: __init__.py  novel_service.py  visualization_service.py
audits/: f1-retire-sync-workflows-rollout-item.md  platform-audit-2026-03-27.md  platform-audit-2026-05-30.md
baselines/: .gitignore  README.md  goldset-2026-04-results.json  goldset-2026-04.yaml
concepts/: IMPLEMENTATION_PROPOSAL_FEEDBACK.md  PLATFORM_ARCHITECTURE_MASTER.md  PROMPT_TEMPLATE_FINAL_SPEC.md  REVIEWER_PROMPT.md  cad-services-architecture-review II.md  cad-services-architecture.md  cad-services-architecture_ roadmap pr checklist.md  docu ci cd.txt  hetzner_auto_healer.py  hetzner_deployment_prompt.md  self-improvement-loop.md
concepts/pptx-hub/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
concepts/pptx-hub/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
concepts/pptx-hub/.github/workflows/: ci.yml
concepts/pptx-hub/docs/: index.md
concepts/pptx-hub/docs/getting-started/: installation.md  quickstart.md
concepts/pptx-hub/docs/guides/: job-processing.md  multi-tenancy.md  storage-backends.md
concepts/pptx-hub/src/pptx_hub/: __init__.py
concepts/pptx-hub/src/pptx_hub/cli/: __init__.py  main.py
concepts/pptx-hub/src/pptx_hub/core/: __init__.py
concepts/pptx-hub/src/pptx_hub/core/models/: __init__.py  job.py  presentation.py
concepts/pptx-hub/src/pptx_hub/core/services/: __init__.py  analyzer.py  extractor.py  repackager.py
concepts/pptx-hub/src/pptx_hub/core/storage/: __init__.py  base.py  local.py  s3.py
concepts/pptx-hub/src/pptx_hub/django/: __init__.py  apps.py  models.py  urls.py
concepts/pptx-hub/src/pptx_hub/django/api/: __init__.py  serializers.py  views.py
concepts/pptx-hub/tests/: __init__.py  conftest.py
concepts/pptx-hub/tests/core/: test_extractor.py
deployment/: README.md  env.staging.template
docs/: ADR-010-mcp-tool-governance.md  ARCHITECTURE.md  (+17 more)
docs-infrastructure/: README.md
docs/adr/inputs/ADR 100 input/: __init__.py  django_adapter.py  frameworks.py  generator.py  parser.py  pyproject.toml  test_outlinefw.py
docs/adr/inputs/discord/: Dockerfile  cascade-inbox-stale.yml  context_builder.py  docker-compose.llm-mcp.yml  guards.py  handlers.py  main.py  pyproject.toml  rate_limit.py  test_llm_mcp.py  utils.py
docs/adr/inputs/outline integration/: ADR-145-review.md  __init__.py  __main__.py  client.py  conftest.py  models.py  pyproject.toml  server.py  services.py  settings.py  sync_adrs_to_outline.sh  tasks.py  test_tools.py  views.py  windsurf_workflows.md
docs/adr/inputs/outline integration/mnt/user-data/outputs/adr-145-deliverables/research_hub/apps/knowledge/: models.py
docs/tool_consolidation/: BEWERTUNG.md  README.md  example_usage.py  pyproject.toml
docs/tool_consolidation/src/tool_consolidation/: __init__.py  base.py  docker_compose.py  docker_container.py  fastmcp_bridge.py  hetzner_server.py
docs/tool_consolidation/tests/: test_consolidation.py  test_docker.py
services/feedback-bridge/: Dockerfile  pyproject.toml
services/feedback-bridge/src/feedback_bridge/: main.py
tools/bf-deploy/: README.md  pyproject.toml
tools/bf-deploy/bf_deploy/: __init__.py  cli.py  config.py  debounce.py  github_api.py
(+4486 files in other folders)
