[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-consolidation"
version = "0.1.0"
description = "Dispatch pattern to consolidate MCP tools and stay under tool limits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "BF Agent Team" }]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastmcp = ["fastmcp>=2.0.0"]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
