[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klickdummy-feedback-bridge"
version = "0.1.0"
description = "feedback.iil.pet — Pfad-A-Endpoint for Klickdummy Co-Creation-Loop (platform:ADR-214)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "iil-klickdummy>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]
