[project]
name = "django-htmx-mcp"
version = "0.1.0"
description = "MCP Server für Django + HTMX Entwicklung"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim", email = "achim@example.com"}
]
keywords = ["django", "htmx", "mcp", "code-generation", "scaffolding"]

dependencies = [
    "mcp>=1.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "inflect>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
django-htmx-mcp = "django_htmx_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
