[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-markdown-export"
version = "1.0.0"
description = "Konvertiert Sphinx-Dokumentation zu einer einzelnen Markdown-Datei"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BF Agent Framework"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
keywords = ["sphinx", "markdown", "documentation", "converter", "django"]

[project.optional-dependencies]
sphinx = [
    "sphinx>=4.0",
    "sphinx-markdown-builder>=0.6.0",
]
django = [
    "django>=4.0",
]
full = [
    "sphinx>=4.0",
    "sphinx-markdown-builder>=0.6.0",
    "django>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
sphinx-to-markdown = "sphinx_markdown_export.cli:main"

[project.urls]
Homepage = "https://github.com/bf-agent/sphinx-markdown-export"
Documentation = "https://github.com/bf-agent/sphinx-markdown-export#readme"
Repository = "https://github.com/bf-agent/sphinx-markdown-export"
Issues = "https://github.com/bf-agent/sphinx-markdown-export/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sphinx_markdown_export*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
