[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_mcp"
version = "1.0.0"
description = "Layer 2 LLM Gateway für iil.gmbh Discord/Cascade Gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",       # für TestClient
    "respx>=0.21",         # httpx Mock
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
